--- a/_data/education.yml
+++ b/_data/education.yml
@@ -11,7 +11,7 @@
 - layout: left
   name: Emory University
   dates: 2013 - 2017
-  qualification: B.S. in Physics and B.S. in Computer Science with Highest Honors
+  qualification: B.S. in Physics and Computer Science with Highest Honors
   quote: >
     A school which has conflicting affinities for both patient health and Coca-Cola.
   description: | # this will include new lines to allow paragraphs
@@ -19,12 +19,12 @@
     
     Academic activities: 
     
-    - [<mark>Dr. Justin Burton's Complex and Non-Equilibrium Systems Laboratory </mark>](https://www.jcburtonlab.com/)
-    - <mark> Emory's Dean's Achievement Scholarship</mark>
-    - [<mark>Emory Scholars Program </mark>](http://college.emory.edu/scholars/)
-    - [<mark>Summer Undergraduate Research Experience</mark>](http://college.emory.edu/undergraduate-research/summer-programs/natural-biomedical-sciences/index.html)
-    - [<mark>Phi Beta Kappa</mark>](https://www.pbk.org/)
-    - [<mark>Sigma Pi Sigma</mark>](https://www.sigmapisigma.org/sigmapisigma)
+    - [Dr. Justin Burton's Complex and Non-Equilibrium Systems Laboratory ](https://www.jcburtonlab.com/)
+    -  Emory's Dean's Achievement Scholarship
+    - [Emory Scholars Program ](http://college.emory.edu/scholars/)
+    - [Summer Undergraduate Research Experience](http://college.emory.edu/undergraduate-research/summer-programs/natural-biomedical-sciences/index.html)
+    - [Phi Beta Kappa](https://www.pbk.org/)
+    - [Sigma Pi Sigma](https://www.sigmapisigma.org/sigmapisigma)
         
         
     Extracurricular activities:
